refactor - add general corrections

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -673,7 +673,7 @@
   "txtList6": "Make sure your face is centered and well",
   "txtList61": "focused in the photo frame",
   "requestSent": "Request sent",
-  "stateEmail": "We have sent you an email to confirm your email address",
+  "stateEmail": "Card request in process",
   "backToTop": "Regresar al inicio",
   "confirm": "Confirm",
   "blockCardText": "Tell us what happened?",
