--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -664,7 +664,7 @@
   "FAVORITE_MOVIE_GENRE": "Género de película favorito",
   "FAVORITE_BOOK_GENRE": "Género de libro favorito",
   "requestSent": "Solicitud enviada",
-  "stateEmail": "Te notificaremos el estado de tu solicitud vía mail..",
+  "stateEmail": "Solicitud de tarjeta en proceso",
   "backToTop": "Back to top",
   "confirm": "Confirm",
   "blockCardText": "Cuentanos ¿qué pasó?",
