fix: habilitar el DNI, helptext con formato de fecha, validacio del formulario.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -560,7 +560,7 @@
   "typeCardRequest": "Type of card requested",
   "nationality": "Nationality",
   "selectNationality": "Select your nationality",
-  "dataExpiredId": "ID Expiration Date ",
+  "dataExpiredId": "DNI Expiration Date ",
   "typeDomicile": "Type of domicile",
   "numberDomicile": "Domicile number",
   "selectTypeDomicile": "Select the type of address",
